--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main class="background">
@@ -58,6 +58,6 @@
         </section>
     </main>
     
-    <script src="index.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
